--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "yarn prepack",
     "generate-types": "graphql-codegen --config codegen.yml",
     "prepare": "npx husky install && shx rm -rf .git/hooks && shx ln -s ../.husky .git/hooks",
-    "prepack": "rm -rf dist",
+    "prepack": "rm -rf dist && tsc",
     "test": "NODE_ENV=test jest",
     "lint": "eslint --config .eslintrc.json --ext .js,.ts ./",
     "lint:fix": "eslint --fix --config .eslintrc.json --ext .js,.ts ./",
