--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,12 +48,13 @@ jobs:
         run: yarn lint
 
       - name: Publish
-        run: npx semantic-release -r $GITHUB_SERVER_URL/$GITHUB_REPOSITORY
+        run: npx semantic-release
         env:
+          NODE_ENV: "cicd"
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          NPM_TOKEN: ${{secrets.npm_token}}
           GITHUB_TOKEN: ${{secrets.gh_token}}
           GIT_AUTHOR_NAME: "autocloud-deploy-bot"
           GIT_AUTHOR_EMAIL: "no-reply@autocloud.dev"
           GIT_COMMITTER_NAME: "autocloud-deploy-bot"
           GIT_COMMITTER_EMAIL: "no-reply@autocloud.dev"
-          NODE_ENV: "cicd"
